[package]
name = "redditrustSDK"
version = "0.1.0"
authors = ["naveen <naveendavisv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10.8"
serde_json = "1.0.57"
serde = {version="1.0.116",features=["derive"]}
tokio-test ="0.2.1"
tokio = { version = "0.2.22", features = ["full"] }